force-app/main/default/objects/Account/fields/A_o_judicial__c.field-meta.xml
<CustomField>
    <fullName>A_o_judicial__c</fullName>
    <label>Ação judicial</label>
    <length>10</length>
    <type>Text</type>
</CustomField>