force-app/main/default/objects/Account/fields/Aceito_Em__c.field-meta.xml
<CustomField>
    <fullName>Aceito_Em__c</fullName>
    <label>Aceito Em</label>
    <type>DateTime</type>
</CustomField>