force-app/main/default/objects/Account/fields/agregado__c.field-meta.xml
<CustomField>
    <fullName>agregado__c</fullName>
    <label>Possui agregado?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SIM</fullName>
            </value>
            <value>
                <fullName>NÃO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>