force-app/main/default/objects/Account/fields/Ano_Proxima_Visita__c.field-meta.xml
<CustomField>
    <fullName>Ano_Proxima_Visita__c</fullName>
    <formula>YEAR(Data_da_Ultima_Visita__c + 30*12/(VALUE(TEXT(Cadencia__c))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ano Próxima Visita</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>