force-app/main/default/objects/Account/fields/Atualizar_conta__c.field-meta.xml
<CustomField>
    <fullName>Atualizar_conta__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Atualizar conta</label>
    <type>Checkbox</type>
</CustomField>