force-app/main/default/objects/Account/fields/Banco__c.field-meta.xml
<CustomField>
    <fullName>Banco__c</fullName>
    <label>Banco</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>001 - BANCO DO BRASIL</fullName>
            </value>
            <value>
                <fullName>033 - SANTANDER</fullName>
            </value>
            <value>
                <fullName>104 - CAIXA ECONÔMICA FEDERAL</fullName>
            </value>
            <value>
                <fullName>237 - BRADESCO</fullName>
            </value>
            <value>
                <fullName>341 - ITAÚ</fullName>
            </value>
            <value>
                <fullName>0007 - BANCO DE GALICIA Y BUENOS AIRES S.A.</fullName>
            </value>
            <value>
                <fullName>0011 - BANCO DE LA NACION ARGENTINA</fullName>
            </value>
            <value>
                <fullName>0014 - BANCO DE LA PROVINCIA DE BUENOS AIRES</fullName>
            </value>
            <value>
                <fullName>0015 - INDUSTRIAL AND COMMERCIAL BANK OF CHINA</fullName>
            </value>
            <value>
                <fullName>0016 - CITIBANK N.A.</fullName>
            </value>
            <value>
                <fullName>0017 - BBVA BANCO FRANCES S.A.</fullName>
            </value>
            <value>
                <fullName>0020 - BANCO DE LA PROVINCIA DE CORDOBA S.A.</fullName>
            </value>
            <value>
                <fullName>0027 - BANCO SUPERVIELLE S.A.</fullName>
            </value>
            <value>
                <fullName>0029 - BANCO DE LA CIUDAD DE BUENOS AIRES</fullName>
            </value>
            <value>
                <fullName>0034 - BANCO PATAGONIA S.A.</fullName>
            </value>
            <value>
                <fullName>0044 - BANCO HIPOTECARIO S.A.</fullName>
            </value>
            <value>
                <fullName>0045 - BANCO DE SAN JUAN S.A.</fullName>
            </value>
            <value>
                <fullName>0060 - BANCO DEL TUCUMAN S.A.</fullName>
            </value>
            <value>
                <fullName>0065 - BANCO MUNICIPAL DE ROSARIO</fullName>
            </value>
            <value>
                <fullName>0072 - BANCO SANTANDER RIO S.A.</fullName>
            </value>
            <value>
                <fullName>0083 - BANCO DEL CHUBUT S.A.</fullName>
            </value>
            <value>
                <fullName>0086 - BANCO DE SANTA CRUZ S.A.</fullName>
            </value>
            <value>
                <fullName>0093 - BANCO DE LA PAMPA SOCIEDAD DE ECONOMÍA M</fullName>
            </value>
            <value>
                <fullName>0094 - BANCO DE CORRIENTES S.A.</fullName>
            </value>
            <value>
                <fullName>0097 - BANCO PROVINCIA DEL NEUQUÉN SOCIEDAD ANÓ</fullName>
            </value>
            <value>
                <fullName>0150 - HSBC BANK ARGENTINA S.A.</fullName>
            </value>
            <value>
                <fullName>0191 - BANCO CREDICOOP COOPERATIVO LIMITADO</fullName>
            </value>
            <value>
                <fullName>0259 - BANCO ITAU ARGENTINA S.A.</fullName>
            </value>
            <value>
                <fullName>0262 - BANK OF AMERICA, NATIONAL ASSOCIATION</fullName>
            </value>
            <value>
                <fullName>0266 - BNP PARIBAS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>