force-app/main/default/objects/Account/fields/BotaoAtualizaCEPEndCobranca__c.field-meta.xml
<CustomField>
    <fullName>BotaoAtualizaCEPEndCobranca__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BotaoAtualizaCEPEndCobranca</label>
    <type>Checkbox</type>
</CustomField>