force-app/main/default/objects/Account/fields/BotaoAtualizaCEPEndEntrega__c.field-meta.xml
<CustomField>
    <fullName>BotaoAtualizaCEPEndEntrega__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BotaoAtualizaCEPEndEntrega</label>
    <type>Checkbox</type>
</CustomField>