force-app/main/default/objects/Account/fields/BotaoAtualizaCEPEndPrincipal__c.field-meta.xml
<CustomField>
    <fullName>BotaoAtualizaCEPEndPrincipal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BotaoAtualizaCEPEndPrincipal</label>
    <type>Checkbox</type>
</CustomField>