force-app/main/default/objects/Account/fields/C_digo_do_parceiro__c.field-meta.xml
<CustomField>
    <fullName>C_digo_do_parceiro__c</fullName>
    <label>Código do parceiro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>