force-app/main/default/objects/Account/fields/Cadastrado_e_nao_instalado__c.field-meta.xml
<CustomField>
    <fullName>Cadastrado_e_nao_instalado__c</fullName>
    <label>Cadastrado e não instalado</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>