force-app/main/default/objects/Account/fields/Cadencia__c.field-meta.xml
<CustomField>
    <fullName>Cadencia__c</fullName>
    <defaultValue>&#39;À planejar&#39;</defaultValue>
    <label>Cadência</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A planejar</fullName>
                <label>À planejar</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>12</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>