force-app/main/default/objects/Account/fields/Carteira__c.field-meta.xml
<CustomField>
    <fullName>Carteira__c</fullName>
    <label>Carteira</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Quantidade_de_ve_culos__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Varejo</fullName>
            </value>
            <value>
                <fullName>PME&#39;S</fullName>
            </value>
            <value>
                <fullName>Freteiro</fullName>
            </value>
            <value>
                <fullName>Top PME&#39;S</fullName>
            </value>
            <value>
                <fullName>GC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>