force-app/main/default/objects/Account/fields/Categoria_do_Parceiro__c.field-meta.xml
<CustomField>
    <fullName>Categoria_do_Parceiro__c</fullName>
    <label>Categoria do Parceiro</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>OURO</fullName>
            </value>
            <value>
                <fullName>PRATA</fullName>
            </value>
            <value>
                <fullName>BRONZE</fullName>
            </value>
            <value>
                <fullName>TRANSIÇÃO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>