force-app/main/default/objects/Account/fields/Celular_contato_autorizado__c.field-meta.xml
<CustomField>
    <fullName>Celular_contato_autorizado__c</fullName>
    <label>Celular contato autorizado</label>
    <type>Phone</type>
</CustomField>