force-app/main/default/objects/Account/fields/Celular_contato_comercial__c.field-meta.xml
<CustomField>
    <fullName>Celular_contato_comercial__c</fullName>
    <label>Celular contato comercial</label>
    <type>Phone</type>
</CustomField>