force-app/main/default/objects/Account/fields/Celular_contato_emergencia__c.field-meta.xml
<CustomField>
    <fullName>Celular_contato_emergencia__c</fullName>
    <label>Celular contato emergência</label>
    <type>Phone</type>
</CustomField>