force-app/main/default/objects/Account/fields/Celular_contato_instalacao__c.field-meta.xml
<CustomField>
    <fullName>Celular_contato_instalacao__c</fullName>
    <label>Celular contato instalação</label>
    <type>Phone</type>
</CustomField>