force-app/main/default/objects/Account/fields/Cep_preenchido_cobranca__c.field-meta.xml
<CustomField>
    <fullName>Cep_preenchido_cobranca__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cep preenchido cobrança</label>
    <type>Checkbox</type>
</CustomField>