force-app/main/default/objects/Account/fields/Cep_preenchido_entrega__c.field-meta.xml
<CustomField>
    <fullName>Cep_preenchido_entrega__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cep preenchido entrega</label>
    <type>Checkbox</type>
</CustomField>