force-app/main/default/objects/Account/fields/Circuito__c.field-meta.xml
<CustomField>
    <fullName>Circuito__c</fullName>
    <defaultValue>&#39;À planejar&#39;</defaultValue>
    <label>Circuito</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A planejar</fullName>
                <label>À planejar</label>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>