force-app/main/default/objects/Account/fields/Cliente__c.field-meta.xml
<CustomField>
    <fullName>Cliente__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo utilizado na conta CT para a identificação dos clientes.</description>
    <label>Clientes Key Account</label>
    <type>Checkbox</type>
</CustomField>