force-app/main/default/objects/Account/fields/Cliente_base__c.field-meta.xml
<CustomField>
    <fullName>Cliente_base__c</fullName>
    <formula>IF(Frota_total_Sascar__c &gt; 0, True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cliente base?</label>
    <type>Checkbox</type>
</CustomField>