force-app/main/default/objects/Account/fields/CNAE__c.field-meta.xml
<CustomField>
    <fullName>CNAE__c</fullName>
    <label>CNAE</label>
    <type>TextArea</type>
</CustomField>