force-app/main/default/objects/Account/fields/CNPJ__c.field-meta.xml
<CustomField>
    <fullName>CNPJ__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Obrigatório somente para contas do tipo Pessoa Jurídica. Especifique o CNPJ da empresa cliente para que ele possa ser cadastrado na intranet.</inlineHelpText>
    <label>CNPJ</label>
    <length>18</length>
    <type>Text</type>
</CustomField>