force-app/main/default/objects/Account/fields/Cobranca_Cartao_CodigoSeguranca_Cript__c.field-meta.xml
<CustomField>
    <fullName>Cobranca_Cartao_CodigoSeguranca_Cript__c</fullName>
    <label>Código de Segurança</label>
    <length>3</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>