force-app/main/default/objects/Account/fields/Cobranca_Cartao_Numero_Cript__c.field-meta.xml
<CustomField>
    <fullName>Cobranca_Cartao_Numero_Cript__c</fullName>
    <description>Campo com o número do Cartão de Crédito na forma Criptografada.</description>
    <label>Número do cartão</label>
    <length>19</length>
    <maskChar>X</maskChar>
    <maskType>creditCard</maskType>
    <type>EncryptedText</type>
</CustomField>