force-app/main/default/objects/Account/fields/Cobranca_Cartao_Vcto__c.field-meta.xml
<CustomField>
    <fullName>Cobranca_Cartao_Vcto__c</fullName>
    <label>Vencimento do Cartão (MMAA)</label>
    <length>4</length>
    <type>Text</type>
</CustomField>