force-app/main/default/objects/Account/fields/Cobranca_DiaVcto__c.field-meta.xml
<CustomField>
    <fullName>Cobranca_DiaVcto__c</fullName>
    <label>Dia de Vencimento</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>