force-app/main/default/objects/Account/fields/Codigo_municipio_cobranca__c.field-meta.xml
<CustomField>
    <fullName>Codigo_municipio_cobranca__c</fullName>
    <label>Código municipio</label>
    <length>20</length>
    <type>Text</type>
</CustomField>