force-app/main/default/objects/Account/fields/Comiss_o_v_lida__c.field-meta.xml
<CustomField>
    <fullName>Comiss_o_v_lida__c</fullName>
    <label>Comissão válida</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>