force-app/main/default/objects/Account/fields/Como_soube_da_Siggo__c.field-meta.xml
<CustomField>
    <fullName>Como_soube_da_Siggo__c</fullName>
    <label>Como soube da Siggo?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Evento</fullName>
            </value>
            <value>
                <fullName>Indicação</fullName>
            </value>
            <value>
                <fullName>Internet</fullName>
            </value>
            <value>
                <fullName>Outro</fullName>
            </value>
            <value>
                <fullName>Rádio</fullName>
            </value>
            <value>
                <fullName>Site</fullName>
            </value>
            <value>
                <fullName>TV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>