force-app/main/default/objects/Account/fields/Conhece_a_Sascar__c.field-meta.xml
<CustomField>
    <fullName>Conhece_a_Sascar__c</fullName>
    <label>Conhece a Sascar?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>