force-app/main/default/objects/Account/fields/Conhece_o_produto__c.field-meta.xml
<CustomField>
    <fullName>Conhece_o_produto__c</fullName>
    <label>Conhece o produto</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>