force-app/main/default/objects/Account/fields/Conta_Indicadora__c.field-meta.xml
<CustomField>
    <fullName>Conta_Indicadora__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conta Indicadora</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contas Indicadas</relationshipLabel>
    <relationshipName>ContasIndicadas</relationshipName>
    <type>Lookup</type>
</CustomField>