force-app/main/default/objects/Account/fields/ContatoEmergencia2__c.field-meta.xml
<CustomField>
    <fullName>ContatoEmergencia2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contato de Emergencia 2</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contas (Contato de Emergencia 2)</relationshipLabel>
    <relationshipName>Contas2</relationshipName>
    <type>Lookup</type>
</CustomField>