force-app/main/default/objects/Account/fields/ContatoEmergencia__c.field-meta.xml
<CustomField>
    <fullName>ContatoEmergencia__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contato de Emergencia</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Id</field>
            <operation>equals</operation>
            <valueField>Contact.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contas (Contato de Emergencia)</relationshipLabel>
    <relationshipName>Conta_ContatoEmergencia</relationshipName>
    <type>Lookup</type>
</CustomField>