force-app/main/default/objects/Account/fields/ContatoEmergenciaCPF__c.field-meta.xml
<CustomField>
    <fullName>ContatoEmergenciaCPF__c</fullName>
    <formula>ContatoEmergencia__r.CPF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ContatoEmergenciaCPF</label>
    <type>Text</type>
</CustomField>