force-app/main/default/objects/Account/fields/ContatoEmergenciaEmail__c.field-meta.xml
<CustomField>
    <fullName>ContatoEmergenciaEmail__c</fullName>
    <formula>ContatoEmergencia__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ContatoEmergenciaEmail</label>
    <type>Text</type>
</CustomField>