force-app/main/default/objects/Account/fields/ContatoEmergenciaRG__c.field-meta.xml
<CustomField>
    <fullName>ContatoEmergenciaRG__c</fullName>
    <formula>ContatoEmergencia__r.RG__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ContatoEmergenciaRG</label>
    <type>Text</type>
</CustomField>