force-app/main/default/objects/Account/fields/ContatoInstalacao__c.field-meta.xml
<CustomField>
    <fullName>ContatoInstalacao__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contato de Instalação/Assistência</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1</booleanFilter>
        <filterItems>
            <field>$Source.Id</field>
            <operation>equals</operation>
            <valueField>Contact.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contas (Contato de Instalação/Assistência)</relationshipLabel>
    <relationshipName>ContaContatoInstalacao</relationshipName>
    <type>Lookup</type>
</CustomField>