force-app/main/default/objects/Account/fields/ContatoInstalacaoCPF__c.field-meta.xml
<CustomField>
    <fullName>ContatoInstalacaoCPF__c</fullName>
    <formula>ContatoInstalacao__r.CPF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ContatoInstalacaoCPF</label>
    <type>Text</type>
</CustomField>