force-app/main/default/objects/Account/fields/ContatoInstalacaoEmail__c.field-meta.xml
<CustomField>
    <fullName>ContatoInstalacaoEmail__c</fullName>
    <formula>ContatoInstalacao__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ContatoInstalacaoEmail</label>
    <type>Text</type>
</CustomField>