force-app/main/default/objects/Account/fields/ContatoInstalacaoRG__c.field-meta.xml
<CustomField>
    <fullName>ContatoInstalacaoRG__c</fullName>
    <formula>ContatoInstalacao__r.RG__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ContatoInstalacaoRG</label>
    <type>Text</type>
</CustomField>