force-app/main/default/objects/Account/fields/ContatoPadrao__c.field-meta.xml
<CustomField>
    <fullName>ContatoPadrao__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contato Padrão</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Id</field>
            <operation>equals</operation>
            <valueField>Contact.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contas (Contato Padrão)</relationshipLabel>
    <relationshipName>Conta_ContatoTodos</relationshipName>
    <type>Lookup</type>
</CustomField>