force-app/main/default/objects/Account/fields/ContatoPessoaAutorizada2__c.field-meta.xml
<CustomField>
    <fullName>ContatoPessoaAutorizada2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pessoa Autorizada 2</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contas (ContatoPessoaAutorizada2)</relationshipLabel>
    <relationshipName>Contas1</relationshipName>
    <type>Lookup</type>
</CustomField>