force-app/main/default/objects/Account/fields/ContatoPessoaAutorizada__c.field-meta.xml
<CustomField>
    <fullName>ContatoPessoaAutorizada__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Pessoa Autorizada</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Id</field>
            <operation>equals</operation>
            <valueField>Contact.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contas</relationshipLabel>
    <relationshipName>Contas</relationshipName>
    <type>Lookup</type>
</CustomField>