force-app/main/default/objects/Account/fields/Copiar_contato_da_conta__c.field-meta.xml
<CustomField>
    <fullName>Copiar_contato_da_conta__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Copiar contato da conta</label>
    <type>Checkbox</type>
</CustomField>