force-app/main/default/objects/Account/fields/Copiar_contato_emerg__c.field-meta.xml
<CustomField>
    <fullName>Copiar_contato_emerg__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Copiar contato autorizado</label>
    <type>Checkbox</type>
</CustomField>