force-app/main/default/objects/Account/fields/CPF__c.field-meta.xml
<CustomField>
    <fullName>CPF__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Obrigatório somente para contas do tipo Pessoa Física. Especifique o CPF do cliente para que ele possa ser cadastrado na intranet.</inlineHelpText>
    <label>CPF</label>
    <length>14</length>
    <type>Text</type>
</CustomField>