force-app/main/default/objects/Account/fields/CPF_contato_autorizado__c.field-meta.xml
<CustomField>
    <fullName>CPF_contato_autorizado__c</fullName>
    <inlineHelpText>Somente dígitos</inlineHelpText>
    <label>CPF contato autorizado</label>
    <length>14</length>
    <type>Text</type>
</CustomField>