force-app/main/default/objects/Account/fields/CPF_contato_emergencia__c.field-meta.xml
<CustomField>
    <fullName>CPF_contato_emergencia__c</fullName>
    <label>CPF contato emergência</label>
    <length>14</length>
    <type>Text</type>
</CustomField>