force-app/main/default/objects/Account/fields/CPF_contato_instalacao__c.field-meta.xml
<CustomField>
    <fullName>CPF_contato_instalacao__c</fullName>
    <label>CPF contato instalação</label>
    <length>14</length>
    <type>Text</type>
</CustomField>