force-app/main/default/objects/Account/fields/CPF_SEM_MASCARA__c.field-meta.xml
<CustomField>
    <fullName>CPF_SEM_MASCARA__c</fullName>
    <formula>IF(  LEN( CPF__c ) == 11, CPF__c ,  SUBSTITUTE(SUBSTITUTE(CPF__c, &#39;.&#39;, &#39;&#39;) , &#39;-&#39;, &#39;&#39;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CPF SEM MASCARA</label>
    <type>Text</type>
</CustomField>