force-app/main/default/objects/Account/fields/Criado_via_lead__c.field-meta.xml
<CustomField>
    <fullName>Criado_via_lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Criado via lead</label>
    <type>Checkbox</type>
</CustomField>