force-app/main/default/objects/Account/fields/CT_PersClie_AguardandoRetorno__c.field-meta.xml
<CustomField>
    <fullName>CT_PersClie_AguardandoRetorno__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aguardando retorno</label>
    <type>Checkbox</type>
</CustomField>