force-app/main/default/objects/Account/fields/CT_PersClie_CodigoCliente__c.field-meta.xml
<CustomField>
    <fullName>CT_PersClie_CodigoCliente__c</fullName>
    <externalId>true</externalId>
    <label>Código do cliente na intranet</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>