force-app/main/default/objects/Account/fields/CT_PersClie_CodigoRetorno__c.field-meta.xml
<CustomField>
    <fullName>CT_PersClie_CodigoRetorno__c</fullName>
    <label>Código de Retorno</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>