force-app/main/default/objects/Account/fields/CT_PersClie_DataProcesso__c.field-meta.xml
<CustomField>
    <fullName>CT_PersClie_DataProcesso__c</fullName>
    <label>Data</label>
    <type>DateTime</type>
</CustomField>