force-app/main/default/objects/Account/fields/CT_PersClie_MensagemProcesso__c.field-meta.xml
<CustomField>
    <fullName>CT_PersClie_MensagemProcesso__c</fullName>
    <label>Mensagem</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>