force-app/main/default/objects/Account/fields/CT_PersClie_MensagemRetorno__c.field-meta.xml
<CustomField>
    <fullName>CT_PersClie_MensagemRetorno__c</fullName>
    <label>Mensagem de Retorno</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>