force-app/main/default/objects/Account/fields/CT_PersClie_MotivoNaoPodeExecutar__c.field-meta.xml
<CustomField>
    <fullName>CT_PersClie_MotivoNaoPodeExecutar__c</fullName>
    <label>Motivo para não executar</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>