force-app/main/default/objects/Account/fields/CUIT__c.field-meta.xml
<CustomField>
    <fullName>CUIT__c</fullName>
    <description>Chave Única de Identificação Tributária.</description>
    <externalId>true</externalId>
    <inlineHelpText>Chave Única de Identificação Tributária. Formato: 00-00000000-0</inlineHelpText>
    <label>CUIT</label>
    <length>13</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>