force-app/main/default/objects/Account/fields/DadosPF_DataNascimento__c.field-meta.xml
<CustomField>
    <fullName>DadosPF_DataNascimento__c</fullName>
    <description>No caso de contas PF, esse campo armazena a data de nascimento do cliente.</description>
    <inlineHelpText>Obrigatório somente para contas do tipo Pessoa Física. Especifique a Data de Nascimento do cliente para que ele possa ser cadastrado na intranet.</inlineHelpText>
    <label>Data de Nascimento</label>
    <type>Date</type>
</CustomField>