force-app/main/default/objects/Account/fields/DadosPF_EstadoCivil__c.field-meta.xml
<CustomField>
    <fullName>DadosPF_EstadoCivil__c</fullName>
    <description>No caso de conta PF, esse campo armazena o estado civil do cliente.</description>
    <inlineHelpText>Obrigatório somente para contas do tipo Pessoa Física. Especifique o Estado Civil (Casado, Solteiro, etc) do cliente para que ele possa ser cadastrado na intranet.</inlineHelpText>
    <label>Estado Civil</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>C-Casado</fullName>
            </value>
            <value>
                <fullName>S-Solteiro</fullName>
            </value>
            <value>
                <fullName>V-Viúvo</fullName>
            </value>
            <value>
                <fullName>D-Divorciado</fullName>
            </value>
            <value>
                <fullName>A-Amasiado</fullName>
            </value>
            <value>
                <fullName>O-Outro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>