force-app/main/default/objects/Account/fields/DadosPF_NomeMae__c.field-meta.xml
<CustomField>
    <fullName>DadosPF_NomeMae__c</fullName>
    <description>Quando a conta for uma conta pessoa física, esse campo deve armazernar o nome da mão do cliente.</description>
    <label>Nome da Mãe</label>
    <length>255</length>
    <type>Text</type>
</CustomField>