force-app/main/default/objects/Account/fields/DadosPF_NomePai__c.field-meta.xml
<CustomField>
    <fullName>DadosPF_NomePai__c</fullName>
    <label>Nome do Pai</label>
    <length>255</length>
    <type>Text</type>
</CustomField>