force-app/main/default/objects/Account/fields/DadosPF_RG__c.field-meta.xml
<CustomField>
    <fullName>DadosPF_RG__c</fullName>
    <inlineHelpText>Obrigatório somente para contas do tipo Pessoa Física. Especifique o RG do cliente para que ele possa ser cadastrado na intranet.</inlineHelpText>
    <label>RG</label>
    <length>13</length>
    <type>Text</type>
</CustomField>