force-app/main/default/objects/Account/fields/DadosPF_Sexo__c.field-meta.xml
<CustomField>
    <fullName>DadosPF_Sexo__c</fullName>
    <description>No caso de constas PF, esse campo armazena o sexo do cliente.</description>
    <inlineHelpText>Obrigatório somente para contas do tipo Pessoa Física. Especifique o Sexo do cliente para que ele possa ser cadastrado na intranet.</inlineHelpText>
    <label>Sexo</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>M-Masculino</fullName>
            </value>
            <value>
                <fullName>F-Feminino</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>