force-app/main/default/objects/Account/fields/DadosPJ_EmpresaOptanteSimples__c.field-meta.xml
<CustomField>
    <fullName>DadosPJ_EmpresaOptanteSimples__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Caso a conta seja de um cliente PJ esse campo deve armazenar o Verdadeiro se a empresa for optante pelo simples.</description>
    <label>Empresa Optante Pelo Simples</label>
    <type>Checkbox</type>
</CustomField>