force-app/main/default/objects/Account/fields/DadosPJ_InscricaoEstadual__c.field-meta.xml
<CustomField>
    <fullName>DadosPJ_InscricaoEstadual__c</fullName>
    <description>No caso de contas de cliente PJ, esse campo armazena o número da inscrição estadual.</description>
    <inlineHelpText>Obrigatório somente para contas do tipo Pessoa Jurídica. Especifique a Inscrição Estadual da empresa cliente para que ele possa ser cadastrado na intranet.</inlineHelpText>
    <label>Inscrição Estadual</label>
    <length>100</length>
    <type>Text</type>
</CustomField>